# litellm-logging-callback

./: .yamllint.yaml  LICENSE  Makefile  README.md  api.env.template  azure-blob.env.template  docker-compose.yml  litellm-config.yaml  pyproject.toml  pyrightconfig.json  s3.env.template
.github/workflows/: lint.yaml  release-artifact.yaml
amberflo/: api_client.py  transformer.py  utils.py  writer_factory.py
docs/: 1-quick-start.md  2-aflo-config.md  3-litellm-to-aflo-mapping.md
templates/: config.demo-api.env
tests/: sample-requests.sh  test_api_client.py  test_events_writer.py  test_logging.py  test_transformer.py  test_utils_get_env.py
tests/resources/: api-key-rate-limit.completion.expected.json  api-key-rate-limit.completion.slo.json  bedrock-anthropic-claude-haiku.completion.expected.json  bedrock-anthropic-claude-haiku.completion.slo.json  bedrock-stability-v1.image_gen.expected.json  bedrock-stability-v1.image_gen.slo.json  disabled-model.completion.expected.json  disabled-model.completion.slo.json  internal-server-error.completion.expected.json  internal-server-error.completion.slo.json  litellm-guardrail-failure.completion.expected.json  litellm-guardrail-failure.completion.slo.json  openai-gpt-4o.completion.expected.json  openai-gpt-4o.completion.slo.json  openai-gpt-image-1.image_gen.expected.json  openai-gpt-image-1.image_gen.slo.json  openai-guardrail-failure.completion.expected.json  openai-guardrail-failure.completion.slo.json  openai-rate-limit.completion.expected.json  openai-rate-limit.completion.slo.json  openai-team-key-a.completion.slo.json  (+9 more)
